# programm_sib

./: README.md  z1.c  z2.c  z3.c  z4.c
lab 3/: z4.c
lab7/: string  string.с
lab_saod/lab10/: lab10.c
lab_saod/lab6/: lab6.c
lab_saod/lab7.1/: lab7.1.c
lab_saod/lab8/: lab8.c
lab_saod/lab_binaresearhe/: lab7.c
lab_saod/lab_digit/: digit.c
lab_saod/lab_hesh1/: hech.c  hech2.c
lab_saod/lab_hesh2/: hech.c
lab_saod/lab_index/: lab9.c
lab_saod/lab_insertsort/: lab5.c
lab_saod/lab_mergesort/: merge.c
lab_saod/lab_quicksort/: QuickSort.c
lab_saod/lab_spiski/: stack.c
labgit/: mergesort.py  sort.c
sem2_prog/lab_binar/: lab5.c
sem2_prog/lab_file/: console_output.txt  existing_input.txt  existing_output.txt  input.txt  lab4.c  output.tx  output.txt
sem2_prog/lab_file/lab4.1/: lab4.1.c  output.txt  test.txt  整瑳琮瑸  畯灴瑵琮瑸开畒獳㘞앾ﭦఀ啒B
sem2_prog/lab_lib/: CMakeLists.txt  main.c  phonebook.c  sort.c
sem2_prog/lab_lib/buildd/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  Phonebook.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  phonebook.vcxproj  phonebook.vcxproj.filters  phonebook_app.vcxproj  phonebook_app.vcxproj.filters
sem2_prog/lab_lib/include/: phonebook.h  sort.h
sem2_prog/lab_lib2/: CMakeLists.txt  matrix_program_dynamic
sem2_prog/lab_lib2/build_shared/: CMakeCache.txt  Makefile  cmake_install.cmake  matrix_program
sem2_prog/lab_lib2/build_static/: CMakeCache.txt  Makefile  cmake_install.cmake  matrix_program
sem2_prog/lab_lib2/include/: matrix_io.h  matrix_operations.h
sem2_prog/lab_lib2/src/: main.c  matrix_io.c  matrix_operations.c
sem2_prog/lab_pthread/src/: matrix_multiply.c  message_queue.c  pthread_basics.c  sleep_sort.c
sem2_prog/lab_sort/: lab1.c
sem2_prog/lab_spiski/: lab2.c
sem2_prog/labgit/: sort.c
sem2_prog/potok/: CMakeLists.txt  laba7.md
sem2_prog/potok/include/: matrix.h  philosophers.h  queue.h  threads.h
sem2_prog/potok/matrix_graff/: benchmark_results.txt  graff.py  matrix.c
sem2_prog/potok/src/: basic_threads.c  main.c  matrix_multiplication.c  message_queue.c  philosophers.c
sem2_prog/rgr_keybordtranig/: CMakeLists.txt  keyboard_trainer.c  keyboard_trainer.h  main.c  test_keyboard_trainer.c
sem_1_prog/lab 3/: z1.c  z3.c
sem_1_prog/lab 4/: z1.c
sem_1_prog/lab8/: kramer.c
web/rgr/VIdeoHost_feat.Yadro/: STARTAPI.sh  STARTNPM.sh  readme.txt
web/rgr/VIdeoHost_feat.Yadro/YadroTube/Backend/: readme.txt
web/rgr/VIdeoHost_feat.Yadro/YadroTube/Backend/YadroTube/: manage.py
web/rgr/VIdeoHost_feat.Yadro/YadroTube/Backend/YadroTube/YadroTube/: asgi.py  settings.py  wsgi.py
web/rgr/VIdeoHost_feat.Yadro/YadroTube/Backend/YadroTube/api/: models.py  permissions.py  serializers.py  urls.py  validators.py  views.py
web/rgr/VIdeoHost_feat.Yadro/YadroTube/Frontend/frontend/: package-lock.json  package.json
web/rgr/VIdeoHost_feat.Yadro/myenv/: pyvenv.cfg
(+20 files in other folders)
